# Safe

./: .gitignore  README.md  package-lock.json
Safe_backend/: Dockerfile  nohup.out  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
Safe_backend/Code441.playground/playground.xcworkspace/xcuserdata/alexnunez.xcuserdatad/: UserInterfaceState.xcuserstate
Safe_backend/Safe_Driver_Sim/Safe_Driver_Sim.xcodeproj/xcuserdata/alexnunez.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Safe_backend/safe_backend/: __init__.py  config.py
Safe_backend/safe_backend/api/: __init__.py  app.py  chatbot.py  chatbot_config.py  config.py  drivers.py  functions.py  requests.py  rides.py  settings.py  testing.py  users.py  utils.py  vehicles.py
Safe_backend/safe_backend/js/: callin.jsx  drivers.jsx  location.jsx  main.jsx  map.jsx  navbar.jsx  queue.jsx  ridereq.jsx  vehicles.jsx
Safe_backend/safe_backend/sql/: schema.sql
Safe_backend/safe_backend/static/: style.css
Safe_backend/safe_backend/static/js/: bundle.js  bundle.js.map
Safe_backend/safe_backend/templates/: acknowledgements.html  dispatch.html  index.html  places.html  ranges.html  services.html  settings.html  times.html  vehicles.html
Safe_backend/safe_backend/views/: __init__.py  index.py  views.py
Safe_backend/safe_driver_sim/safe_driver_sim/: ContentView.swift  LocManager.swift  NavView.swift  Vehicle.swift  safe_driver_simApp.swift
Safe_backend/safe_driver_sim/safe_driver_sim.xcodeproj/: project.pbxproj
dispatcher_frontend/: .gitignore  package-lock.json  package.json
(+98 files in other folders)
