[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe_backend"
version = "1.0.0"
dependencies = [
    "Flask"
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["safe_backend"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]